--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,11 +15,33 @@ spring:
     gateway:
       routes:
         - id: auth-service
-          uri: http://localhost:9000/
+          uri: lb://AMD-Backend-Auth
           predicates:
-            - Path=/auth/**
+            - Path=/auth/login
+            - Method=POST
+          filters:
+            - RemoveRequestHeader=Cookie
+            - RewritePath=/auth/(?<segment>.*), /$\{segment}
 
         - id: auth-service
-          uri: http://localhost:9000/
+          uri: lb://AMD-Backend-Auth
           predicates:
-            - Path=/**
+            - Path=/auth/signup
+            - Method=POST
+          filters:
+            - RemoveRequestHeader=Cookie
+            - RewritePath=/auth/(?<segment>.*), /$\{segment}
+
+        - id: auth-service
+          uri: lb://AMD-Backend-Auth
+          predicates:
+            - Path=/auth/**
+            - Method=GET
+          filters:
+            - RemoveRequestHeader=Cookie
+            - RewritePath=/auth/(?<segment>.*), /$\{segment}
+
+        - id: parse-service
+          uri: http://localhost:9001/
+          predicates:
+            - Path=/parse/**
