--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,18 @@ ext {
 }
 
 dependencies {
+    // jwt
+    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+
+    // openjdk-11 부터는 java EE API 가 포함되어있지 않아jaxb 패키지를 설치해야 함.
+    implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '2.3.2'
+
+    // javax.xml.bind
+    implementation 'com.sun.xml.bind:jaxb-impl:2.3.3'
+
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
