--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 server:
   port: 8000
 
+token:
+  secret: AMD_Backend_Authentication_Token
+
 eureka:
   client:
     register-with-eureka: true
@@ -8,13 +11,14 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka
 
+
 spring:
   application:
     name: gateway-service
   cloud:
     gateway:
       routes:
-        - id: auth-service
+        - id: auth-service  # 로그인
           uri: lb://AMD-Backend-Auth
           predicates:
             - Path=/auth/login
@@ -23,7 +27,7 @@ spring:
             - RemoveRequestHeader=Cookie
             - RewritePath=/auth/(?<segment>.*), /$\{segment}
 
-        - id: auth-service
+        - id: auth-service  # 회원가입
           uri: lb://AMD-Backend-Auth
           predicates:
             - Path=/auth/signup
@@ -32,7 +36,7 @@ spring:
             - RemoveRequestHeader=Cookie
             - RewritePath=/auth/(?<segment>.*), /$\{segment}
 
-        - id: auth-service
+        - id: auth-service  # GET으로 시작하는 페이지는 인증 헤더 필요
           uri: lb://AMD-Backend-Auth
           predicates:
             - Path=/auth/**
@@ -40,6 +44,7 @@ spring:
           filters:
             - RemoveRequestHeader=Cookie
             - RewritePath=/auth/(?<segment>.*), /$\{segment}
+            - AuthorizationHeaderFilter   # AuthorizationHeader 검증
 
         - id: parse-service
           uri: http://localhost:9001/
