--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
     gateway:
       routes:
         - id: auth-service  # 로그인
-          uri: lb://AMD-Backend-Auth
+          uri: http://10.96.100.34
           predicates:
             - Path=/auth/login
             - Method=POST
@@ -34,7 +34,7 @@ spring:
             - RewritePath=/auth/(?<segment>.*), /$\{segment}
 
         - id: auth-service  # 회원가입
-          uri: lb://AMD-Backend-Auth
+          uri: http://10.96.100.34
           predicates:
             - Path=/auth/signup
             - Method=POST
@@ -43,7 +43,7 @@ spring:
             - RewritePath=/auth/(?<segment>.*), /$\{segment}
 
         - id: auth-service  # 로그아웃
-          uri: lb://AMD-Backend-Auth
+          uri: http://10.96.100.34
           predicates:
             - Path=/auth/logout
             - Method=POST
@@ -52,7 +52,7 @@ spring:
             - RewritePath=/auth/(?<segment>.*), /$\{segment}
 
         - id: auth-service  # GET으로 시작하는 페이지는 인증 헤더 필요
-          uri: lb://AMD-Backend-Auth
+          uri: http://10.96.100.34
           predicates:
             - Path=/user/**
             - Method=GET
@@ -67,7 +67,8 @@ spring:
             - Path=/parse/**
 
         - id: auth-service
-          uri: lb://AMD-Backend-Auth
+          #uri: lb://AMD-Backend-Auth
+          uri: http://10.96.100.34
           predicates:
             - Path=/auth/actuator/**
             - Method=GET, POST
