--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,7 +25,8 @@ spring:
     gateway:
       routes:
         - id: auth-service  # 로그인
-          uri: http://10.96.100.34:9000
+          uri: lb://AMD-Backend-Auth
+          #uri: http://10.96.100.34:9000
           predicates:
             - Path=/auth/login
             - Method=POST
@@ -34,7 +35,8 @@ spring:
             - RewritePath=/auth/(?<segment>.*), /$\{segment}
 
         - id: auth-service  # 회원가입
-          uri: http://10.96.100.34:9000
+          uri: lb://AMD-Backend-Auth
+          #uri: http://10.96.100.34:9000
           predicates:
             - Path=/auth/signup
             - Method=POST
@@ -43,7 +45,8 @@ spring:
             - RewritePath=/auth/(?<segment>.*), /$\{segment}
 
         - id: auth-service  # 로그아웃
-          uri: http://10.96.100.34:9000
+          uri: lb://AMD-Backend-Auth
+          #uri: http://10.96.100.34:9000
           predicates:
             - Path=/auth/logout
             - Method=POST
@@ -52,7 +55,8 @@ spring:
             - RewritePath=/auth/(?<segment>.*), /$\{segment}
 
         - id: auth-service  # GET으로 시작하는 페이지는 인증 헤더 필요
-          uri: http://10.96.100.34:9000
+          uri: lb://AMD-Backend-Auth
+          #uri: http://10.96.100.34:9000
           predicates:
             - Path=/user/**
             - Method=GET
@@ -64,11 +68,15 @@ spring:
         - id: parse-service
           uri: lb://AMD-Backend-parse
           predicates:
-            - Path=/parse/**
+            - Path=/react/**
+          filters:
+            - RemoveRequestHeader=Cookie
+            - RewritePath=/react/(?<segment>.*), /$\{segment}
+            # - AuthorizationHeaderFilter   # AuthorizationHeader 검증
 
         - id: auth-service
-          #uri: lb://AMD-Backend-Auth
-          uri: http://10.96.100.34:9000
+          uri: lb://AMD-Backend-Auth
+          #uri: http://10.96.100.34:9000
           predicates:
             - Path=/auth/actuator/**
             - Method=GET, POST
