--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,8 +25,8 @@ spring:
     gateway:
       routes:
         - id: auth-service  # 로그인
-          uri: lb://AMD-Backend-Auth
-          #uri: http://10.96.100.34:9000
+          #uri: lb://AMD-Backend-Auth
+          uri: http://10.96.100.34:9000
           predicates:
             - Path=/auth/login
             - Method=POST
@@ -35,8 +35,8 @@ spring:
             - RewritePath=/auth/(?<segment>.*), /$\{segment}
 
         - id: auth-service  # 회원가입
-          uri: lb://AMD-Backend-Auth
-          #uri: http://10.96.100.34:9000
+          #uri: lb://AMD-Backend-Auth
+          uri: http://10.96.100.34:9000
           predicates:
             - Path=/auth/signup
             - Method=POST
@@ -45,8 +45,8 @@ spring:
             - RewritePath=/auth/(?<segment>.*), /$\{segment}
 
         - id: auth-service  # 로그아웃
-          uri: lb://AMD-Backend-Auth
-          #uri: http://10.96.100.34:9000
+          #uri: lb://AMD-Backend-Auth
+          uri: http://10.96.100.34:9000
           predicates:
             - Path=/auth/logout
             - Method=POST
@@ -55,8 +55,8 @@ spring:
             - RewritePath=/auth/(?<segment>.*), /$\{segment}
 
         - id: auth-service  # GET으로 시작하는 페이지는 인증 헤더 필요
-          uri: lb://AMD-Backend-Auth
-          #uri: http://10.96.100.34:9000
+          #uri: lb://AMD-Backend-Auth
+          uri: http://10.96.100.34:9000
           predicates:
             - Path=/user/**
             - Method=GET
@@ -66,7 +66,8 @@ spring:
             # - AuthorizationHeaderFilter   # AuthorizationHeader 검증
 
         - id: parse-service
-          uri: lb://AMD-Backend-parse
+          #uri: lb://AMD-Backend-parse
+          uri: http://10.96.100.39:9001
           predicates:
             - Path=/react/**
           filters:
@@ -75,8 +76,8 @@ spring:
             # - AuthorizationHeaderFilter   # AuthorizationHeader 검증
 
         - id: auth-service
-          uri: lb://AMD-Backend-Auth
-          #uri: http://10.96.100.34:9000
+          # uri: lb://AMD-Backend-Auth
+          uri: http://10.96.100.34:9000
           predicates:
             - Path=/auth/actuator/**
             - Method=GET, POST
